--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "pg": "^8.3.3"
+    "morgan": "^1.10.0",
+    "nunjucks": "^3.2.2",
+    "pg": "^8.0.3"
   }
 }
