--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonschema": "^1.2.6",
+    "lodash": "^4.17.20",
     "morgan": "^1.10.0",
     "nunjucks": "^3.2.2",
     "pg": "^8.0.3"
